# rv7

./: .gitignore  Makefile.in  README.md  bootstrap  configure.ac
.github/workflows/: cicd.yml
data/boot/: limine.conf
etc/: motive
sys/: Makefile  rv7
sys/acpi/: acpi.c
sys/arch/amd64/: Makefile  boot.S
sys/arch/amd64/boot/: apboot.asm
sys/arch/amd64/conf/: link.ld
sys/arch/amd64/cpu/: boot.S  cpu.c  gdt.S  idt.S  lapic.c  mmu.c  mp.c  spinlock.c  trap.S
sys/arch/amd64/io/: uart.S
sys/arch/amd64/isa/: i8254.S
sys/arch/amd64/os/: os_panic.c  (+1 more)
sys/dev/clkdev/: hpet.c
sys/dev/cons/: cons.c  cons_font.c
sys/dev/video/: vram.c
sys/fs/: tmpfs.c
sys/inc/acpi/: acpi.h  tables.h
sys/inc/fs/: tmpfs.h
sys/inc/kern/: cpu.h  mount.h  namei.h  panic.h  serial.h  spinlock.h  vfs.h  vnode.h
sys/inc/lib/: assert.h  stdarg.h  stdbool.h  string.h
sys/inc/mu/: cpu.h  irq.h  mmu.h  panic.h  process.h  spinlock.h
sys/inc/os/: mmio.h  mount.h  omar.h  process.h  sched.h  trace.h  vfs.h
sys/inc/sys/: atomic.h  cdefs.h  errno.h  limits.h  mman.h  param.h  queue.h  types.h
sys/inc/vm/: kalloc.h  map.h  phys.h  vm.h
sys/kern/: Makefile  kern_init.c  kern_namei.c  kern_panic.c  kern_serial.c  kern_spinlock.c  vfs_init.c  vfs_mount.c  vfs_subr.c
sys/lib/string/: itoa.c  memcmp.c  memcpy.c  memset.c  strcmp.c  strlen.c  strncmp.c  vsnprintf.c
sys/mu/: mmu_stub.c
sys/os/: os_omar.c  os_process.c  os_sched.c  os_trace.c
sys/vm/: vm_hhdm.c  vm_init.c  vm_kalloc.c  vm_map.c  vm_phys.c  vm_tlsf.c
tools/: build-toolchain.sh
tools/omar/: omar.1  omar.c
(+17 files in other folders)
